Created login component

--- a/views/src/Common/Credentials/Register/Register.css
+++ b/views/src/Common/Credentials/Register/Register.css
@@ -1,20 +1,22 @@
-.credentials.container.inner .register.outer{
+/* If the class says 'register_login', its common for both the register and login pages */
+
+.credentials.container.inner .register_login.outer{
     width: 90%;
     margin-top: 30px;
     display: flex; align-items: center; flex-direction: column;
 }
-.credentials.container.inner .register.outer h4{
+.credentials.container.inner .register_login.outer h4{
     font-size: 1.1em; width: 100%; text-align: center;
 }
 
 /* Form elements */
-.credentials.container.inner .register.outer form{
+.credentials.container.inner .register_login.outer form{
     width:  100%;
     margin-top: 40px;
     display: flex; flex-direction: column;align-items: center; 
 }
 
-.credentials.container.inner .register.outer div.form-element{
+.credentials.container.inner .register_login.outer div.form-element{
     height:35px;
     outline: 1px solid black;
     position: relative;
@@ -22,14 +24,14 @@
     cursor: text;
     margin-bottom: 20px;
 }
-.credentials.container.inner .register.outer div.form-element:last-of-type{margin-bottom: 20px}
+.credentials.container.inner .register_login.outer div.form-element:last-of-type{margin-bottom: 20px}
 
 .credentials.container .register.outer .termsConditions{
     width: 430px;
     text-align: left;
     font-size: 0.8em;
 }
-.credentials.container .register.outer .last{
+.credentials.container .register_login.outer .last{
     width: 430px; height: 50px;
     background-color: black;
     color: white;
@@ -37,14 +39,14 @@
     outline: none; border: 0;
     cursor: pointer;
 }
-.credentials.container .register.outer .last:hover{background-color: rgb(21, 21, 21)}
+.credentials.container .register_login.outer .last:hover{background-color: rgb(21, 21, 21)}
 
-.credentials.container .register.outer .last.login{
+.credentials.container .register_login.outer .last.login{
     margin-top: 5px;
     background-color: rgba(0, 0, 0, 0.3);
     color: black;
 }
-.credentials.container .register.outer .last.login:hover{background-color: rgb(135, 135, 135)}
+.credentials.container .register_login.outer .last.login:hover{background-color: rgb(135, 135, 135)}
 
 /* Form inputs */
 .credentials.container .form-element input{
