--- a/views/src/Pages/ItemPage/ItemPage.css
+++ b/views/src/Pages/ItemPage/ItemPage.css
@@ -2,3 +2,7 @@
     height: 100vh; width: 100%;
     display: flex; align-items: center; justify-content: center;
 }
+
+#ItemPage{
+    width: 100%;
+}
