--- a/views/src/Pages/ItemPage/Description/Description.css
+++ b/views/src/Pages/ItemPage/Description/Description.css
@@ -1,5 +1,49 @@
 
 .description.outer.container{
     width: 40vw; max-width: 900px;
-    height: 45vw; margin-top: 30px;
+    height: 45vw; margin-top: 30px; max-height: 800px;
+    display: flex; flex-direction: column; align-items: center;
+}
+
+.description.outer.container h2{
+    width: 100%; 
+    font-size: 2.5em; font-weight: 600;
+}
+
+section.description.ItemPage form{
+    margin-top: 6%; width: 100%;
+    display: flex; flex-direction: column; align-items: center; justify-content: center;
+}
+section.description.ItemPage .size_selection{
+    display: flex;
+}
+section.description.ItemPage .size_selection button{
+    font-size: 1.5em; font-weight: 500;
+    height: 3vw; width: 3vw;   max-height: 60px; max-width: 60px;
+    margin: 1vw;
+    outline: 0; border: 0;
+    cursor: pointer;
+    background-color: rgb(255, 255, 255);
+    border: 4px solid black;
+    display: flex; align-items: center;justify-content: center;
+}
+section.description.ItemPage .size_selection button:hover{
+    background-color: rgb(240, 240, 240);
+}
+
+section.description.outer.container .add_to_cart{
+    width: 50%; height: 4vw; max-height: 100px;
+    margin-top: 6%;
+}
+section.description.outer.container .add_to_cart button{
+    width: 100%; height: 100%;
+    border: 0; outline: 0;
+    color: white;
+    display: flex; align-items: center; justify-content: center;
+    background-color: black;
+    cursor: pointer;
+}
+
+section.description.outer.container p{
+    margin-top: 12%; font-size: 1.2em;
 }
