--- a/views/public/common.css
+++ b/views/public/common.css
@@ -6,9 +6,14 @@
 }
 
 body{
-    min-height: 100vh;
     background-color: white;
     overflow: visible;
+    position: relative;
+    display: flex; flex-direction: column;
+}
+
+#root{
+    display: flex; flex-direction: column;    min-height: 100vh;
 }
 
 .center{
