--- a/views/src/Common/Footer/Footer.css
+++ b/views/src/Common/Footer/Footer.css
@@ -1,5 +1,5 @@
 /* Top section */
-footer{width: 100%; display: flex; flex-direction: column; align-items: center; background-color:rgb(230, 227, 227);}
+footer{width: 100%; display: flex; flex-direction: column; align-items: center; background-color:rgb(230, 227, 227); margin-top: auto}
 footer .top_section.outer{
     width: 100%; height: 200px;
     display: flex; justify-content: center; align-items: center;
