--- a/views/src/Pages/ItemPage/Gallery/Gallery.css
+++ b/views/src/Pages/ItemPage/Gallery/Gallery.css
@@ -38,12 +38,15 @@ section.gallery .selected_image img{
     border: 0;outline: 0; cursor: pointer;
     max-height: 250px;
 }
+.gallery.carousel.inner .wrap:hover{
+    opacity: 0.9;
+}
 .gallery.carousel.inner .wrap:last-of-type{margin-bottom: 0}
 
 /* Carousel Buttons */
 .gallery.carousel .button{
     position: absolute; z-index: 99;
-    outline: 0; border: 0; height: 3vw; width: 3vw; display: flex; align-items: center; justify-content: center; background-color: white;
+    outline: 0; border: 0; height: 50px; width: 50px; display: flex; align-items: center; justify-content: center; background-color: white;
     cursor: pointer; 
     background-color: rgb(246, 246, 246);
 }
@@ -58,4 +61,25 @@ section.gallery .selected_image img{
 /* Carousel images */
 .gallery.carousel button img{
     width: 100%;
+}
+
+
+
+/* Alt screens */
+
+@media all and (max-width: 1000px){
+    section.gallery.outer{width: 100%; height: 75vw; justify-content: space-evenly; margin-bottom: 0;}
+    .gallery.container.outer .selected_image{height: 75vw;}
+    .gallery.carousel.outer{height: 75vw; margin: 0;}
+    .gallery.carousel.inner .wrap{height: 25vw; width: 100%}
+}
+
+@media all and (max-width: 700px){
+    section.gallery.outer{width: 100%; height: 100vw;}
+    .gallery.container.outer .selected_image{height: 100vw; width: 70%}
+    .gallery.container.outer .selected_image img{height: auto; width: 100%}
+    .gallery.carousel.outer{height: 100vw; margin: 0;}
+    .gallery.carousel.outer img{height: auto; width: 100%}
+    .gallery.carousel.inner .wrap{height: 30vw; width: 100%}
+    .gallery.carousel .button{height: 30px; width: 30px;}
 }
