--- a/views/src/Pages/Search/SearchBar/SearchBar.css
+++ b/views/src/Pages/Search/SearchBar/SearchBar.css
@@ -31,7 +31,7 @@
         width: 90%; display: flex; align-items: center; justify-content: center;
     }
     .searchbar.container.outer form input.searchbar.input{
-        width:95%;
+        width:95%; min-width: none; min-width: 0;
     }
 
     .searchbar.container.outer .search_query{
