Made size buttons functional

--- a/views/src/Pages/ItemPage/Description/Description.css
+++ b/views/src/Pages/ItemPage/Description/Description.css
@@ -31,6 +31,10 @@ section.description.ItemPage .size_selection button:hover{
     background-color: rgb(240, 240, 240);
 }
 
+section.description.ItemPage .size_selection button.highlight{
+    background-color: rgb(34, 222, 34);
+}
+
 section.description.outer.container .add_to_cart{
     width: 300px; height: 50px; max-height: 100px;
     margin-top: 6%;
