Made changes to loading icon

--- a/views/src/Pages/Search/SearchBar/SearchBar.css
+++ b/views/src/Pages/Search/SearchBar/SearchBar.css
@@ -5,6 +5,7 @@
     align-items: center; 
     position: fixed; top: 65px;   /*Height of header* z-index: 999;*/
     background-color: #fff;
+    z-index: 999;
 }
 
 .searchbar.container.outer .search_query{
