--- a/views/src/Pages/Home/Featured/Featured.css
+++ b/views/src/Pages/Home/Featured/Featured.css
@@ -12,7 +12,7 @@
     display: flex; justify-content: center; align-items: center;
     height: 40vw; width: 30%; max-width: 500px;  max-height: 750px;
     overflow: hidden;
-    background-color: #9195A0;
+    background-color: rgb(225, 225, 225);
 }
 .featured.outer.featured_wrap img {width: 100%; height: auto;}
 .featured.outer.featured_wrap>div:nth-child(2) img{transform: translateX(-5%)}
