--- a/views/src/Pages/Home/Large/Large.css
+++ b/views/src/Pages/Home/Large/Large.css
@@ -5,7 +5,7 @@
     height: 50vw; 
     margin: 70px 0;
     overflow: hidden;
-    background-color: black;
+    background-color: rgb(225, 225, 225);
     position: relative;
 }
 
