--- a/views/src/Pages/Home/Landing/Landing.css
+++ b/views/src/Pages/Home/Landing/Landing.css
@@ -2,6 +2,7 @@
 .landing.image.outer{
     width: 100%; max-height: 1000px; min-height: 600px;
     overflow: hidden;
+    background-color: rgb(225, 225, 225);
     position: relative;
 }
 .landing.image.outer img{
