--- a/views/src/Pages/Search/SearchResults/SearchResults.css
+++ b/views/src/Pages/Search/SearchResults/SearchResults.css
@@ -1,34 +1,43 @@
-.searchresults.outer.container{
-    margin-top: 100px;
-    min-height: 500px; margin-bottom: 50px;
-    display: grid; grid-template-columns: repeat(4, 23vw);
-    grid-auto-rows: 30vw;
-    grid-gap: 1vw;
+.searchresults.outer.container {
+  margin-top: 100px;
+  min-height: 500px;
+  margin-bottom: 50px;
+  display: grid;
+  grid-template-columns: repeat(4, 23vw);
+  grid-auto-rows: 30vw;
+  grid-gap: 1vw;
 } /*Break at 1000px*/
 
 /* Loading Icon */
-.searchresults.outer.container#SearchResultsLoading{display: flex; justify-content: center; height:80vh; min-height: 300px;max-height: 400px; align-items: center;}
+.searchresults.outer.container#SearchResultsLoading {
+  display: flex;
+  justify-content: center;
+  height: 80vh;
+  min-height: 300px;
+  max-height: 400px;
+  align-items: center;
+}
 
-.searchresults.outer.container#SearchResultsLoading .loader{
-    /* transform: translateX(0.5vw) */
+.searchresults.outer.container#SearchResultsLoading .loader {
+  /* transform: translateX(0.5vw) */
 }
 /* Alt screens */
-@media all and (max-width: 1200px){
-    .searchresults.outer.container{
-        grid-template-columns: repeat(3, 30vw);
-        grid-auto-rows: 40vw;
-    }
+@media all and (max-width: 1200px) {
+  .searchresults.outer.container {
+    grid-template-columns: repeat(3, 30vw);
+    grid-auto-rows: 40vw;
+  }
 }
-@media all and (max-width: 900px){
-    .searchresults.outer.container{
-        grid-template-columns: repeat(2, 40vw);
-        gap: 15px;
-        grid-auto-rows: 50vw;
-    }
+@media all and (max-width: 900px) {
+  .searchresults.outer.container {
+    grid-template-columns: repeat(2, 40vw);
+    gap: 15px;
+    grid-auto-rows: 50vw;
+  }
 }
-@media all and (max-width: 550px){
-    .searchresults.outer.container{
-        grid-template-columns: repeat(1, 90vw);
-        grid-auto-rows: 100vw;  /*Add max values*/
-    }
+@media all and (max-width: 550px) {
+  .searchresults.outer.container {
+    grid-template-columns: repeat(1, 90vw);
+    grid-auto-rows: 120vw; /*Add max values*/
+  }
 }
