--- a/views/src/Pages/Home/Featured/Featured.css
+++ b/views/src/Pages/Home/Featured/Featured.css
@@ -1,46 +1,72 @@
-.featured.container.outer{
-    width: 100%;display: flex; flex-direction: column; 
-    background-color: rgb(255, 255, 255);
+
+section.featured.container.outer{
+    width: 100%; 
 }
 
-/* Main */
-.featured.outer.featured_wrap{
+
+div.featured.container.inner{
+    width: 100%; max-width: 2000px;
+    display: flex;  align-items: center; justify-content: center; gap: 1vw;
+    margin: 10vw 0;
+}
+
+section.featured .title {
     width: 100%; 
-    width: 100%; display: flex; justify-content: center; align-items: center; 
 }
-.featured.outer.featured_wrap>div{
-    display: flex; justify-content: center; align-items: center;
-    height: 40vw; width: 30%; max-width: 500px;  max-height: 750px;
+section.featured .title h3{
+    /* width: 70%; border-bottom: 2px solid black; */
+    margin: 3vw 0;
+    height: 3em;
+    font-size: 1.8em;
+    font-weight: 700;
+}
+
+section.featured .image.outer{
+    width: 100%;
+    height: 500px; min-height: 500px;
     overflow: hidden;
-    background-color: rgb(225, 225, 225);
 }
-.featured.outer.featured_wrap img {width: 100%; height: auto;}
-.featured.outer.featured_wrap>div:nth-child(2) img{transform: translateX(-5%)}
-.featured.outer.featured_wrap>div:nth-child(3) img{
-    height: 100%; width: auto;
+section.featured .image.outer img{
+    width: 100%;
 }
-.featured.outer.featured_wrap>div:last-child{display: none;}
-@media all and (max-width: 800px){
-    .featured.outer.featured_wrap img{height: 105%; width: auto}
+
+/* For him/her section */
+section.featured .forThem{
+    width: 40%; height: 30vw; max-width: 800px; max-height: 500px; min-height: 200px;
+    overflow: hidden;
+    transition: width 200ms ease-out;
+    cursor: pointer;
+    position: relative;
 }
+/* Fix for 4k */
+section.featured .forThem img{
+    width: 50vw;
+}
+section.featured .forThem:hover{
+    width: 50%; 
+}
+
+section.featured .forThem a.shop{
+    display:flex;
+    width: 20vw; height:5vw; max-width: 200px; max-height: 50px; min-width: 150px; min-height: 2em;
+    position: absolute; z-index: 99;
+    border: 0; outline: 0;
+    background-color: white;
+    font-weight: 500;
+}
+section.featured a.shop:hover{display: flex; background-color: rgb(224, 224, 224)}
+
 
 /* Alt screens */
-/* At a width of 900px, will convert 3 part element into one large part with no gaps. */
-@media all and (max-width: 900px){
-    .featured.outer.featured_wrap{gap: 0; margin: 0px;}
-    .featured.outer.featured_wrap>div{height: 60vw;}
-    .featured.outer.featured_wrap  img{height: 100%; width: auto}
-}
-@media all and (max-width: 700px){
-    .featured.outer.featured_wrap>div:nth-child(2) img{transform: translateX(0%)}
-    .featured.outer.featured_wrap{
-        width: 90%; height: 150vw; max-height: 1000px;
-        display: grid; gap: 0;
-        grid-template: 1fr 1fr/ 1fr 1fr;
+
+@media all and (max-width: 750px){
+    div.featured.container.inner{
+        flex-direction: column; gap: 30px;
     }
-    .featured.outer.featured_wrap>div:last-child{display: inline-block;}
-    .featured.outer.featured_wrap>div{
-        height: 100%; width: 100%;
+
+    section.featured .forThem{width: 90%; height: 50vw;  }
+    section.featured .forThem:hover{
+        width: 90%;
     }
-    .featured.outer.featured_wrap>div:nth-child(3) img{transform: translateX(-5%)}
+    section.featured .forThem img{width: 90vw;}
 }
