--- a/views/src/Pages/Home/Landing/Landing.css
+++ b/views/src/Pages/Home/Landing/Landing.css
@@ -20,7 +20,7 @@
     margin-bottom: 30px;
 }
 .landing.container .landing.text.outer a {
-    width: 250px; height: 50px; color: white; font-weight: 700; font-size: 1.5em; 
+    width: 250px; height: 50px; color: white; font-weight: 500; font-size: 1.5em; 
     background-color: rgb(255, 26, 26);
 }
 
@@ -40,6 +40,7 @@
     }
 }
 @media all and (max-width: 700px){
+    /* .landing.container.outer{max-height: 700px;} */
     .landing.container.outer img{ height: 100%}
 
     .landing.container .landing.text.outer h2{
