--- a/views/src/Pages/Home/Collections/Collections.css
+++ b/views/src/Pages/Home/Collections/Collections.css
@@ -1,88 +1,13 @@
-.collections.container.outer, .collections.container.inner{
-    width: 100%;
-}
-.collections.container.inner{
-    display: flex; align-items: center; justify-content: center; gap: 5px;
-}
 
-.collections.collection_wrap.outer{
-    height: 30vw; width: 40%; max-width: 800px; max-height: 500px;
-    background-color: black;
-    transition: width 200ms ease-out;
-    margin: 70px 0;
+section.collections, .collections.inner.container{width: 100%}
+
+section.collections{max-width: 2000px; min-height: 500px}
+
+.collections.inner.container{
+    display: flex; align-items: center; justify-content: center;
+    flex-direction: column;
     overflow: hidden;
-    flex-shrink: 1;
-}
-.collections.collection_wrap.outer:hover{
-    width: 50%;
-}
-.collections.collection_wrap.outer:focus{
-    outline: 2px black solid;
-}
-.collections.collection_wrap.outer img{
-    width: 60vw;  max-width: 800px; height: auto;
+    height: 900px;
+    position: relative;
 }
 
-/* Animations */
-.collections.container.inner.to-animate>a{
-    transform: translateY(15%)
-}
-.collections.container.inner.animate-now>a:first-child{
-    transition: transform 0.4s ease-out , width 100ms ease-out ;
-    transform: translateY(0)
-}
-.collections.container.inner.animate-now>a:last-child{
-    transition: transform 0.4s ease-out 0.2s, width 100ms ease-out;
-    transform: translateY(0)
-}
-
-/* Alt screens */
-@media all and (max-width: 900px){
-    .collections.collection_wrap.outer{
-        height: 300px;
-    }
-    .collections.collection_wrap.outer img{
-        width: 600px;
-    }
-}
-@media all and (max-width: 600px){
-    .collections.inner.container{
-        flex-direction: column; 
-        margin-top: 70px;
-    }
-    .collections.collection_wrap.outer{
-        width: 90%; height: 250px; margin: 0; transition: none !important;
-    }
-    .collections.collection_wrap.outer img{
-        width: 600px;
-    }
-
-    /* Removing the hover effect */
-    .collections.collection_wrap.outer:hover{
-        width: 90%;
-    }
-}
-
-@media all and (max-width: 450px){
-    .collections.collection_wrap.outer{
-        width: 90%; height: 200px; margin: 0;
-    }
-    .collections.collection_wrap.outer img{
-        width: 410px;
-    }    
-}
-@media all and (max-width: 300px){
-    .collections.collection_wrap.outer img{
-        height: 100%;
-        width: auto;
-    }       
-}
-
-@media all and (min-width: 1850px){
-    .collections.collection_wrap.outer{
-        width: 700px;
-    }
-    .collections.collection_wrap.outer:hover{
-        width: 800px;
-    }
-}
