--- a/views/src/Pages/Home/Collections/Collections.css
+++ b/views/src/Pages/Home/Collections/Collections.css
@@ -4,10 +4,14 @@ section.collections, .collections.inner.container{width: 100%}
 section.collections{max-width: 2000px; min-height: 500px}
 
 .collections.inner.container{
-    display: flex; align-items: center; justify-content: center;
+    display: flex; align-items: center; justify-content: flex-start;
     flex-direction: column;
     overflow: hidden;
-    height: 900px;
+    height: 500px;
     position: relative;
+    margin: 100px 0;
+    width: 90%;
 }
 
+
+.collections.inner.container img{width: 100%}
