--- a/views/src/Pages/Home/Categories/Categories.css
+++ b/views/src/Pages/Home/Categories/Categories.css
@@ -12,7 +12,7 @@ section.categories{
 }
 
 section.categories .category_wrap{
-    width: 100%; height: 25vw; 
+    width: 100%; height: 25vw; max-height: 480px;
     background-color: rgb(225, 225, 225);
     overflow: hidden;
     position: relative;
@@ -25,6 +25,7 @@ section.categories .category_wrap:hover{
 section.categories .category_wrap img{
     height: 100%;
 }
+section.categories .category_wrap:nth-child(1) img{transform: scale(0.95) translateY(-3%)}
 section.categories .category_wrap:nth-child(2) img{
     width: 100%; height: auto;
     transform: scale(1.1) translateY(-7%)
@@ -34,8 +35,9 @@ section.categories .category_wrap:nth-child(4) img{width: 100%; height: auto; tr
 
 section.categories .category_wrap span{
     display: flex; align-items: center; justify-content: center;
-    height: 3vw; width: 100%; background-color: rgb(225, 225, 225);
-    font-weight: 700;font-size: 1.3vw; 
+    height: 3vw; width: 100%; max-height: 3em;
+    background-color: rgb(225, 225, 225);
+    font-weight: 700;font-size: 1.1em; 
     position: absolute;
     bottom: 0;
 }
@@ -65,6 +67,6 @@ section.categories .category_wrap span{
     }
     section.categories .category_wrap span{
         height: 7vw;
-        font-size: 4vw;
+        font-size: 3vw;
     }
 }
