--- a/views/src/Pages/Home/Categories/Categories.css
+++ b/views/src/Pages/Home/Categories/Categories.css
@@ -1,72 +1,96 @@
-section.categories{
-    width: 100%;
+section.categories {
+  width: 100%;
 }
 
-.categories.inner.container{
-    width: 95%; max-width: 2000px;
-    margin: 10vw 0;
-    display: grid; grid-template: 1fr/ repeat(4, 1fr);
-    gap: 2vw;
-    align-items: center; 
-    justify-items: center;
+.categories.inner.container {
+  width: 95%;
+  max-width: 2000px;
+  margin: 10vw 0;
+  display: grid;
+  grid-template: 1fr / repeat(4, 1fr);
+  gap: 2vw;
+  align-items: center;
+  justify-items: center;
 }
 
-section.categories .category_wrap{
-    width: 100%; height: 25vw; max-height: 480px;
-    background-color: rgb(225, 225, 225);
-    overflow: hidden;
-    position: relative;
+section.categories .category_wrap {
+  width: 100%;
+  height: 25vw;
+  max-height: 480px;
+  background-color: rgb(225, 225, 225);
+  overflow: hidden;
+  position: relative;
 }
 
-section.categories .category_wrap:hover{
-    filter: brightness(0.9)
+section.categories .category_wrap:hover {
+  filter: brightness(0.9);
 }
 
-section.categories .category_wrap img{
-    height: 100%;
+section.categories .category_wrap img {
+  height: 100%;
 }
-section.categories .category_wrap:nth-child(1) img{transform: scale(0.95) translateY(-3%)}
-section.categories .category_wrap:nth-child(2) img{
-    width: 100%; height: auto;
-    transform: scale(1.1) translateY(-7%)
-}
-section.categories .category_wrap:nth-child(3) img{transform: translateY(-10%); width: 100%}
-section.categories .category_wrap:nth-child(4) img{width: 100%; height: auto; transform: scale(1) translateY(-10%)}
 
-section.categories .category_wrap span{
-    display: flex; align-items: center; justify-content: center;
-    height: 3vw; width: 100%; max-height: 3em;
-    background-color: rgb(225, 225, 225);
-    font-weight: 700;font-size: 1.1em; 
-    position: absolute;
-    bottom: 0;
+/* Individual fine tuning */
+section.categories .category_wrap:nth-child(1) img {
+  transform: scale(0.95) translateY(-3%);
 }
+section.categories .category_wrap:nth-child(2) img {
+  width: 100%;
+  height: auto;
+  transform: scale(1.1) translateY(-7%);
+}
+section.categories .category_wrap:nth-child(3) img {
+  transform: translateY(-10%);
+  width: 100%;
+}
+section.categories .category_wrap:nth-child(4) img {
+  width: 100%;
+  height: auto;
+  transform: scale(1) translateY(-10%);
+}
+
+/* Text section */
+
+section.categories .category_wrap span {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 3vw;
+  width: 100%;
+  max-height: 3em;
+  background-color: rgb(225, 225, 225);
+  font-weight: 700;
+  font-size: 1.1em;
+  position: absolute;
+  bottom: 0;
+}
+
 /* Alt screens */
-@media all and (max-width: 1000px){
-    .categories.inner.container{
-        width: 70%; 
-        grid-template: auto auto / 1fr 1fr
-    }
+@media all and (max-width: 1000px) {
+  .categories.inner.container {
+    width: 70%;
+    grid-template: auto auto / 1fr 1fr;
+  }
 
-    section.categories .category_wrap{
-        height: 35vw;
-    }
-    section.categories .category_wrap span{
-        height: 5vw;
-        font-size: 2vw;
-    }
+  section.categories .category_wrap {
+    height: 35vw;
+  }
+  section.categories .category_wrap span {
+    height: 5vw;
+    font-size: 2vw;
+  }
 }
 
-@media all and (max-width: 500px){
-    .categories.inner.container{
-        margin: 80px 0;
-        width: 90%;
-    }
-    section.categories .category_wrap{
-        height: 50vw;
-    }
-    section.categories .category_wrap span{
-        height: 7vw;
-        font-size: 3vw;
-    }
+@media all and (max-width: 500px) {
+  .categories.inner.container {
+    margin: 80px 0;
+    width: 90%;
+  }
+  section.categories .category_wrap {
+    height: 50vw;
+  }
+  section.categories .category_wrap span {
+    height: 7vw;
+    font-size: 3vw;
+  }
 }
