--- a/views/src/Pages/Home/Categories/Categories.css
+++ b/views/src/Pages/Home/Categories/Categories.css
@@ -5,7 +5,7 @@ section.categories {
 .categories.inner.container {
   width: 95%;
   max-width: 2000px;
-  margin: 10vw 0;
+  margin: min(10vw, 150px) 0;
   display: grid;
   grid-template: 1fr / repeat(4, 1fr);
   gap: 2vw;
