--- a/views/src/Pages/Home/Featured/Featured.css
+++ b/views/src/Pages/Home/Featured/Featured.css
@@ -5,68 +5,114 @@ section.featured.container.outer{
 
 
 div.featured.container.inner{
-    width: 100%; max-width: 2000px;
-    display: flex;  align-items: center; justify-content: center; gap: 1vw;
-    margin: 100px 0;
+    width: 95%; max-width: 2000px;
+    display: flex;  align-items: center; justify-content: center;
+    margin-bottom: min(150px, 10vw);
+    flex-direction: column;
 }
 
-section.featured .title {
-    width: 100%; 
+/* Title */
+section.featured h3{
+    margin-right: auto;
+    font-weight: 700; font-size: 1.8em;
+    
 }
-section.featured .title h3{
-    /* width: 70%; border-bottom: 2px solid black; */
-    margin: 3vw 0;
-    height: 3em;
-    font-size: 1.8em;
+
+/* Featured items container */
+section.featured .featured_items{
+    margin-top: 30px; width: 100%;;
+    display: grid;
+    width: 100%; grid-template-columns: repeat(4, 1fr);
+    grid-auto-rows: auto; 
+    column-gap: min(3vw, 50px); row-gap: 30px
+}
+
+/* Featured item structure */
+section.featured .featured_wrap{
+    display: flex;  align-items: center; justify-content: center; flex-direction: column;
+    width: 100%; height: min(23vw, 450px);
+    overflow: hidden;
+    background-color: rgb(225, 225, 225);
+}
+
+.featured_wrap .featured_image{
+    height: 80%; width: 100%;
+    overflow: hidden;
+}
+
+.featured_wrap .featured_image img{
+    width: 100%;
+}
+
+section.featured .featured_wrap .featured_text{
+    height: 20%; width: 100%; 
+    background-color: rgb(225, 225, 225);
+    display: flex; flex-direction: column; align-items: flex-start; justify-content: space-evenly
+}
+
+section.featured .featured_wrap .featured_text> div{
+    padding-left: 5%;
+    font-size: 1em;
+}
+
+section.featured .featured_wrap .title{
     font-weight: 700;
 }
 
-section.featured .image.outer{
-    width: 100%;
-    height: 500px; min-height: 500px;
-    overflow: hidden;
+section.featured .featured_wrap .price{
+    font-weight: 500;
 }
-section.featured .image.outer img{
-    width: 100%;
-}
-
-/* For him/her section */
-section.featured .forThem{
-    width: 40%; height: 30vw; max-width: 800px; max-height: 500px; min-height: 200px;
-    overflow: hidden;
-    transition: width 200ms ease-out;
-    cursor: pointer;
-    position: relative;
-}
-/* Fix for 4k */
-section.featured .forThem img{
-    width: 50vw;
-}
-section.featured .forThem:hover{
-    width: 50%; 
-}
-
-section.featured .forThem a.shop{
-    display:flex;
-    width: 20vw; height:50px; max-width: 200px; min-width: 150px; 
-    position: absolute; z-index: 99;
-    border: 0; outline: 0;
-    background-color: white;
-    font-weight: 700;
-}
-section.featured a.shop:hover{display: flex; background-color: rgb(224, 224, 224)}
 
 
 /* Alt screens */
 
-@media all and (max-width: 750px){
-    div.featured.container.inner{
-        flex-direction: column; gap: 30px; margin: 50px 0;
+
+@media all and (max-width: 1000px){
+    section.featured .featured_items{
+        grid-template-columns: repeat(3, 1fr)
     }
 
-    section.featured .forThem{width: 90%; height: 50vw;  }
-    section.featured .forThem:hover{
-        width: 90%;
+    section.featured .featured_wrap{
+        height:35vw;
     }
-    section.featured .forThem img{width: 90vw;}
+
+    section.featured .featured_wrap .featured_text> div{
+        font-size: 2vw;
+    }
+}
+
+
+@media all and (max-width: 650px){
+    section.featured .featured_items{
+        margin-top: 50px;
+        grid-template-columns: repeat(2, 1fr)
+    }
+
+    section.featured .featured_wrap{
+        height:55vw;
+    }
+
+    section.featured h3{
+        margin: 0 auto;
+        font-size: 1.3em;
+    }
+
+    section.featured .featured_wrap .featured_text> div{
+        font-size: 2.5vw;
+    }
+}
+
+@media all and (max-width: 450px){
+    section.featured .featured_items{
+        width: 75%;
+        grid-template-columns: repeat(1, 1fr);
+        row-gap: 3vw;
+    }
+
+    section.featured .featured_wrap{
+        height:75vw;
+    }
+    section.featured .featured_wrap .featured_text> div{
+        font-size: 4vw;
+    }
 }
