Modularized product containers

--- a/views/src/Pages/Search/SearchResults/SearchResults.css
+++ b/views/src/Pages/Search/SearchResults/SearchResults.css
@@ -1,12 +1,13 @@
 .searchresults.outer.container {
   margin-top: 100px;
-  min-height: 500px;
   margin-bottom: 50px;
-  display: grid;
-  grid-template-columns: repeat(4, 23vw);
-  grid-auto-rows: 30vw;
-  grid-gap: 1vw;
-} /*Break at 1000px*/
+} 
+
+/* Product template */
+.searchresults.outer.container .product_items{
+  width: 90%;
+}
+
 
 /* Loading Icon */
 .searchresults.outer.container#SearchResultsLoading {
@@ -20,24 +21,4 @@
 
 .searchresults.outer.container#SearchResultsLoading .loader {
   /* transform: translateX(0.5vw) */
-}
-/* Alt screens */
-@media all and (max-width: 1200px) {
-  .searchresults.outer.container {
-    grid-template-columns: repeat(3, 30vw);
-    grid-auto-rows: 40vw;
-  }
-}
-@media all and (max-width: 900px) {
-  .searchresults.outer.container {
-    grid-template-columns: repeat(2, 40vw);
-    gap: 15px;
-    grid-auto-rows: 50vw;
-  }
-}
-@media all and (max-width: 550px) {
-  .searchresults.outer.container {
-    grid-template-columns: repeat(1, 90vw);
-    grid-auto-rows: 120vw; /*Add max values*/
-  }
 }
