--- a/views/src/Pages/Home/Featured/Featured.css
+++ b/views/src/Pages/Home/Featured/Featured.css
@@ -15,105 +15,6 @@ div.featured.container.inner{
 section.featured h3{
     margin-right: auto;
     font-weight: 700; font-size: 1.8em;
-    
+    margin-bottom: 50px;
 }
 
-/* Featured items container */
-section.featured .featured_items{
-    margin-top: 30px; width: 100%;;
-    display: grid;
-    width: 100%; grid-template-columns: repeat(4, 1fr);
-    grid-auto-rows: auto; 
-    column-gap: min(3vw, 50px); row-gap: 30px
-}
-
-/* Featured item structure */
-section.featured .featured_wrap{
-    display: flex;  align-items: center; justify-content: center; flex-direction: column;
-    width: 100%; height: min(23vw, 450px);
-    overflow: hidden;
-    background-color: rgb(225, 225, 225);
-}
-
-.featured_wrap .featured_image{
-    height: 80%; width: 100%;
-    overflow: hidden;
-}
-
-.featured_wrap .featured_image img{
-    width: 100%;
-}
-
-section.featured .featured_wrap .featured_text{
-    height: 20%; width: 100%; 
-    background-color: rgb(225, 225, 225);
-    display: flex; flex-direction: column; align-items: flex-start; justify-content: space-evenly
-}
-
-section.featured .featured_wrap .featured_text> div{
-    padding-left: 5%;
-    font-size: 1em;
-}
-
-section.featured .featured_wrap .title{
-    font-weight: 700;
-}
-
-section.featured .featured_wrap .price{
-    font-weight: 500;
-}
-
-
-/* Alt screens */
-
-
-@media all and (max-width: 1000px){
-    section.featured .featured_items{
-        grid-template-columns: repeat(3, 1fr)
-    }
-
-    section.featured .featured_wrap{
-        height:35vw;
-    }
-
-    section.featured .featured_wrap .featured_text> div{
-        font-size: 2vw;
-    }
-}
-
-
-@media all and (max-width: 650px){
-    section.featured .featured_items{
-        width: 80%;
-        margin-top: 50px;
-        grid-template-columns: repeat(2, 1fr)
-    }
-
-    section.featured .featured_wrap{
-        height:45vw;
-    }
-
-    section.featured h3{
-        margin: 0 auto;
-        font-size: 1.3em;
-    }
-
-    section.featured .featured_wrap .featured_text> div{
-        font-size: 2.5vw;
-    }
-}
-
-@media all and (max-width: 450px){
-    section.featured .featured_items{
-        width: 75%;
-        grid-template-columns: repeat(1, 1fr);
-        row-gap: 3vw;
-    }
-
-    section.featured .featured_wrap{
-        height:75vw;
-    }
-    section.featured .featured_wrap .featured_text> div{
-        font-size: 4vw;
-    }
-}
