--- a/views/src/Pages/Search/SearchResults/SearchResults.css
+++ b/views/src/Pages/Search/SearchResults/SearchResults.css
@@ -5,7 +5,7 @@
 
 /* Product template */
 .searchresults.outer.container .product_items{
-  width: 90%;
+  width: 90%;   /*Overrider*/
 }
 
 
@@ -17,8 +17,4 @@
   min-height: 300px;
   max-height: 400px;
   align-items: center;
-}
-
-.searchresults.outer.container#SearchResultsLoading .loader {
-  /* transform: translateX(0.5vw) */
 }
