--- a/views/src/Pages/Search/SearchResults/SearchResults.css
+++ b/views/src/Pages/Search/SearchResults/SearchResults.css
@@ -5,7 +5,7 @@
 
 /* Product template */
 .searchresults.outer.container .product_items{
-  width: 90%;   /*Overrider*/
+  width: 95%;   /*Overrider*/ max-width: 2000px;
 }
 
 
