--- a/views/src/Pages/Home/Featured/Featured.css
+++ b/views/src/Pages/Home/Featured/Featured.css
@@ -6,7 +6,7 @@ section.featured.container.outer{
 
 div.featured.container.inner{
     width: 95%; max-width: 2000px;
-    display: flex;  align-items: center; justify-content: center;
+    display: flex;  align-items:center; 
     margin-bottom: min(150px, 10vw);
     flex-direction: column;
 }
@@ -20,6 +20,26 @@ section.featured h3{
 
 @media all and (max-width: 500px){
     section.featured h3{
-        margin-bottom: 0px;
+        margin-bottom: 40px;
     }
 }
+
+/* Show more functionality */
+
+/* .featured.container.inner{
+    overflow-y: hidden;
+    height: 30vw; justify-content: flex-start;
+    position: relative;
+}
+.featured.container.inner button{
+    position: absolute; bottom: 0;
+}
+
+.featured.container.inner.showMore{
+    animation-name: more; animation-fill-mode: forwards; animation-duration: 1s; animation-iteration-count: 1;
+}
+
+@keyframes more {
+    from{height: 30vw}
+    to{height: 50vw}
+} */
